<?xml version="1.0" encoding="utf-8"?>
<!-- Primary destinations. Item icons are tinted by
     @color/bottom_nav_item_selector via the bottom navigation style. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/navRecipes"
        android:icon="@drawable/ic_nav_recipes"
        android:title="@string/bottom_nav_recipes" />

    <item
        android:id="@+id/navFridge"
        android:icon="@drawable/ic_nav_fridge"
        android:title="@string/bottom_nav_fridge" />

    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/bottom_nav_profile" />

</menu>
