<?xml version="1.0" encoding="utf-8"?>
<!-- AI Recipe Magic advisory card: mirrors the home/forgot-password advisory
     design (faint icon in the top-right, title + body block) plus a
     "Generate Recipes" primary action. Inflated as the header of the Recipes
     list by RecipesAdapter so it scrolls with the catalogue. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_3"
    android:background="@drawable/bg_privacy_card">

    <ImageView
        android:id="@+id/recipesAiIcon"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="@dimen/space_4"
        android:alpha="0.18"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_ai"
        app:tint="@color/brand_primary" />

    <LinearLayout
        android:id="@+id/recipesAiContentRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_padding_compact">

        <TextView
            android:id="@+id/recipesAiTitle"
            style="@style/TextAppearance.Lighture.CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipes_ai_title"
            android:textColor="@color/text_primary" />

        <TextView
            android:id="@+id/recipesAiBody"
            style="@style/TextAppearance.Lighture.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_0_5"
            android:text="@string/recipes_ai_body"
            android:textColor="@color/text_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recipesAiGenerateButton"
            style="@style/Widget.Lighture.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/space_4"
            android:text="@string/recipes_ai_generate"
            app:icon="@drawable/ic_ai"
            app:iconTint="@color/button_primary_text" />
    </LinearLayout>

</FrameLayout>
