<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileTop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_page"
    android:elevation="@dimen/space_1"
    android:orientation="vertical"
    android:paddingStart="@dimen/page_padding_x"
    android:paddingEnd="@dimen/page_padding_x">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="@dimen/space_2"
        android:paddingBottom="@dimen/space_2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileTitle"
                style="@style/TextAppearance.Lighture.PageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_title"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/font_size_xl" />

            <TextView
                android:id="@+id/profileSubtitle"
                style="@style/TextAppearance.Lighture.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_0_5"
                android:maxLines="2"
                android:text="@string/profile_subtitle"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/space_3"
            android:background="@drawable/bg_icon_circle"
            android:contentDescription="@string/profile_settings_description"
            android:padding="@dimen/space_3"
            app:srcCompat="@drawable/ic_settings"
            app:tint="@color/icon_primary" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />
</LinearLayout>
