<?xml version="1.0" encoding="utf-8"?>
<!-- Success content, inflated into the auth frame. Shown after the password
     has been reset; avatar is loaded from assets. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/page_padding_x"
        android:paddingTop="@dimen/space_6"
        android:paddingEnd="@dimen/page_padding_x"
        android:paddingBottom="@dimen/space_8">

        <include
            android:id="@+id/authHeader"
            layout="@layout/view_auth_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_4" />

        <ImageView
            android:id="@+id/successAvatar"
            android:layout_width="@dimen/size_avatar_xl"
            android:layout_height="@dimen/size_avatar_xl"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_8"
            android:contentDescription="@string/auth_success_title"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/successTitle"
            style="@style/TextAppearance.Lighture.SectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_6"
            android:gravity="center_horizontal"
            android:text="@string/auth_success_title"
            android:textColor="@color/text_primary" />

        <TextView
            android:id="@+id/successSubtitle"
            style="@style/TextAppearance.Lighture.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_1"
            android:gravity="center_horizontal"
            android:text="@string/auth_success_subtitle"
            android:textColor="@color/text_secondary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/successButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_button_lg"
            android:layout_marginTop="@dimen/space_6"
            android:background="@drawable/bg_button_gradient"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="@dimen/space_2"
            android:drawableTint="@color/text_inverse"
            android:elevation="@dimen/elevation_card"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingStart="@dimen/space_4"
            android:paddingEnd="@dimen/space_4"
            android:text="@string/auth_success_button"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Lighture.Label"
            android:textColor="@color/text_inverse" />

    </LinearLayout>
</ScrollView>
